# math-kick

./: CMakeLists.txt
src/: calculator.cpp  calculator.h  main.cpp  operation.cpp  operation.h  parse.cpp  parse.h  token_test.cpp  tokenizer.cpp  tokenizer.h  util.cpp  util.h  util_test.cpp
